--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,18 +1,22 @@
 html * {
-  font-size: 16px;
-  line-height: 1.625;
-  color: black;
-  font-family: Nunito, sans-serif;
+	font-size: 16px;
+	line-height: 1.625;
+	color: black;
+	font-family: Nunito, sans-serif;
 }
 
 .mainpage-bg {
-  width: 100vw;
-  height: 100vh;
+	width: 100vw;
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
+	justify-content: center;
 }
 
 .error {
-  display: flex;
-  padding: 20px;
-  align-items: center;
-  justify-content: center;
+	display: flex;
+	padding: 20px;
+	align-items: center;
+	justify-content: center;
 }
