--- a/my-app/src/components/WeeklyForecast.css
+++ b/my-app/src/components/WeeklyForecast.css
@@ -1,22 +1,23 @@
 .container-div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 2;
 }
 
 .box-single {
-  padding: 50px;
-  background-color: rgba(255, 255, 255, 0.3);
-  border-radius: 20px;
-  padding: 10px;
-  margin: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+	padding: 50px;
+	background-color: rgba(255, 255, 255, 0.3);
+	border-radius: 20px;
+	padding: 10px;
+	margin: 20px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 
 .text-single {
-  font-size: 20px;
-  margin-top: 5px;
+	font-size: 20px;
+	margin-top: 5px;
 }
